website/versioned_docs/version-1.5.0/tutorials/index.md
---
sidebar_position: 3
title: Tutorials
description: Step-by-step guides for thresh development workflows
---

# Tutorials

Comprehensive guides to get the most out of thresh, from quick starts to advanced AI integration.

## Getting Started

### [Quick Start (5 Minutes)](/docs/tutorials/quick-start)

Get your first thresh environment running in just 5 minutes.

**You'll learn:**
- Install thresh on Windows
- Choose and provision a blueprint
- Enter and use your environment
- Basic environment management

**Time:** 5 minutes  
**Difficulty:** Beginner

---

## Environment Creation

### [Creating Custom Blueprints](/docs/tutorials/custom-blueprints)

Build your own environment templates tailored to your exact workflow.

**You'll learn:**
- Blueprint file structure and syntax
- Package management for different distributions
- Post-install scripts and environment variables
- Real-world blueprint examples
- Testing and sharing blueprints

**Time:** 20 minutes  
**Difficulty:** Intermediate

---

## AI Integration

### [GitHub Copilot SDK Configuration](/docs/tutorials/copilot-sdk)

Set up AI-powered environment management with GitHub Copilot in VS Code.

**You'll learn:**
- Configure thresh as an MCP server
- Use natural language to manage environments
- Generate blueprints with AI assistance
- Best practices for AI-driven development

**Time:** 10 minutes  
**Difficulty:** Beginner

### [VS Code MCP Integration](/docs/tutorials/vscode-mcp)

Deep dive into Model Context Protocol integration for advanced AI workflows.

**You'll learn:**
- MCP protocol fundamentals
- Configure multiple AI clients (Copilot, Claude, Cline)
- Available tools and capabilities
- Advanced server configuration
- Debugging and troubleshooting

**Time:** 30 minutes  
**Difficulty:** Advanced

---

## Tutorial Path

### Beginner Track

1. [Quick Start](/docs/tutorials/quick-start) - Get started (5 min)
2. [GitHub Copilot SDK](/docs/tutorials/copilot-sdk) - AI integration (10 min)
3. [Creating Custom Blueprints](/docs/tutorials/custom-blueprints) - Customization (20 min)

**Total: 35 minutes**

### Advanced Track

1. [Creating Custom Blueprints](/docs/tutorials/custom-blueprints) - Blueprint development (20 min)
2. [VS Code MCP Integration](/docs/tutorials/vscode-mcp) - Advanced AI (30 min)

**Total: 50 minutes**

### Team Onboarding

1. [Quick Start](/docs/tutorials/quick-start) - Everyone (5 min)
2. [Creating Custom Blueprints](/docs/tutorials/custom-blueprints) - Team leads (20 min)
3. [GitHub Copilot SDK](/docs/tutorials/copilot-sdk) - AI integration (10 min)

**Total: 35 minutes**

---

## Additional Resources

**CLI Reference:**
- [thresh up](/docs/cli-reference/up) - Provision environments
- [thresh blueprints](/docs/cli-reference/blueprints) - List blueprints
- [thresh generate](/docs/cli-reference/generate) - AI blueprint generation

**Guides:**
- [Installation](/docs/installation) - Platform-specific setup
- [MCP Integration](/docs/mcp-integration) - AI assistant configuration
- [Getting Started](/docs/intro) - Overview and concepts

**Community:**
- [GitHub Discussions](https://github.com/dealer426/thresh/discussions) - Ask questions
- [GitHub Issues](https://github.com/dealer426/thresh/issues) - Report bugs
- [Blog](https://thresh.sh/blog) - Latest updates and tips

---

## Contributing Tutorials

Have a great thresh workflow? Share it with the community!

**How to contribute:**
1. Fork the [thresh repository](https://github.com/dealer426/thresh)
2. Create tutorial in `website/docs/tutorials/`
3. Follow existing format and style
4. Submit pull request

See [CONTRIBUTING.md](https://github.com/dealer426/thresh/blob/main/CONTRIBUTING.md) for details.

---

Need help? Visit [GitHub Discussions](https://github.com/dealer426/thresh/discussions) or open an issue.
